added new features
